--- a/src/style.css
+++ b/src/style.css
@@ -93,6 +93,38 @@ body {
   padding-inline: 15px;
 }
 
+h1,
+h2,
+h3 {
+  color: var(--independence);
+  font-family: var(--ff-mulish);
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: var(--fs-1);
+}
+
+h2 {
+  font-size: var(--fs-2);
+}
+
+h3 {
+  font-size: var(--fs-3);
+}
+
+.btn {
+  font-size: var(--fs-6);
+  font-weight: var(--fw-700);
+  padding: 15px 30px;
+  border-radius: 4px;
+  transition: var(--transition);
+}
+
+.btn:is(:hover, :focus) {
+  transform: translateY(-2px);
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -147,4 +179,55 @@ body {
 
 :is(.navbar__link, .header-actions__link):is(:hover, :focus) {
   color: var(--majorelle-blue);
+}
+
+/* Hero */
+
+.hero {
+  padding: 125px 0 var(--section-padding);
+  background-color: var(--ghost-white-1);
+}
+
+.hero-content {
+  margin-bottom: 80px;
+}
+
+.hero-title {
+  margin-bottom: 25px;
+}
+
+.hero-text {
+  color: var(--cool-gray);
+  font-size: var(--fs-4);
+  font-weight: var(--fw-500);
+  line-height: 1.8;
+  margin-bottom: 40px;
+}
+
+.form-text {
+  color: var(--independence);
+  font-weight: var(--fw-500);
+  line-height: 1.8;
+  margin-bottom: 20px;
+}
+
+.form-text span {
+  display: inline-block;
+  font-size: 20px;
+}
+
+.email-field {
+  background-color: var(--ghost-white-2);
+  padding: 17px 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.email-field:focus {
+  outline-color: var(--majorelle-blue);
+}
+
+.btn-primary {
+  background-color: var(--majorelle-blue);
+  color: var(--white);
 }
