--- a/src/style.css
+++ b/src/style.css
@@ -293,3 +293,63 @@ h3 {
   line-height: 1.8;
   margin-bottom: 20px;
 }
+
+.about-list {
+  display: grid;
+  gap: 20px;
+}
+
+.about-card {
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 3px 12px hsla(233, 77%, 10%, 0.05);
+  border-radius: 4px;
+  transition: var(--transition);
+}
+
+.about-card:hover {
+  background-color: var(--majorelle-blue);
+  transform: translateY(-5px);
+  box-shadow: 0 5px 18px hsla(245, 67%, 59%, 0.05);
+}
+
+.about-card .card-icon {
+  width: 60px;
+  height: 60px;
+  background-color: var(--lavender-web);
+  display: grid;
+  place-items: center;
+  color: var(--majorelle-blue);
+  font-size: 20px;
+  border-radius: 50%;
+  margin-inline: auto;
+  margin-bottom: 20px;
+  transition: var(--transition);
+}
+
+.about-card:hover .card-icon {
+  background-color: hsla(0, 0%, 100%, 0.15);
+  color: var(--white);
+  box-shadow: 0 0 8px hsla(0, 0%, 100%, 0.05);
+}
+
+.about-card .card-title {
+  margin-bottom: 10px;
+  transition: var(--transition);
+}
+
+.about-card:hover .card-title {
+  color: var(--white);
+}
+
+.about-card .card-text {
+  color: var(--cool-gray);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-500);
+  line-height: 1.8;
+  transition: var(--transition);
+}
+
+.about-card:hover .card-text {
+  color: hsla(0, 0%, 100%, 0.5);
+}
