--- a/src/style.css
+++ b/src/style.css
@@ -151,6 +151,17 @@ h3 {
   color: var(--majorelle-blue);
 }
 
+.section-title {
+  text-align: center;
+}
+
+.section-text {
+  color: var(--cool-gray);
+  font-size: var(--fs-6);
+  line-height: 1.7;
+  text-align: center;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -352,4 +363,98 @@ h3 {
 
 .about-card:hover .card-text {
   color: hsla(0, 0%, 100%, 0.5);
+}
+
+/* Features */
+
+.features {
+  padding-block: var(--section-padding);
+  background-color: var(--ghost-white-1);
+}
+
+.features .section-title {
+  margin-bottom: 15px;
+}
+
+.features .section-text {
+  margin-bottom: 60px;
+}
+
+.features-wrapper:not(:last-child) {
+  margin-bottom: 80px;
+}
+
+.features-banner {
+  margin-bottom: 35px;
+}
+
+.features-banner img {
+  width: 100%;
+}
+
+.features-content-subtitle {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: var(--fs-5);
+  color: var(--eerie-black);
+  margin-bottom: 20px;
+}
+
+.features-content-subtitle ion-icon {
+  color: var(--majorelle-blue);
+  font-size: 20px;
+}
+
+.features-content-title {
+  font-size: var(--fs-2);
+  font-family: var(--ff-mulish);
+  color: var(--independence);
+  font-weight: var(--fw-600);
+  margin-bottom: 25px;
+}
+
+.features-content-title strong {
+  font-weight: var(--fw-700);
+}
+
+.features-content-text {
+  font-size: var(--fs-6);
+  color: var(--cool-gray);
+  line-height: 1.7;
+  margin-bottom: 25px;
+}
+
+.features-list {
+  margin-bottom: 40px;
+}
+
+.features-list-item {
+  display: flex;
+  align-items: flex-start;
+  gap: 5px;
+  font-size: var(--fs-5);
+  color: var(--cool-gray);
+  margin-bottom: 10px;
+}
+
+.features-list-item ion-icon {
+  font-size: 24px;
+}
+
+.features-list-item p {
+  width: calc(100%- 20px);
+}
+
+.features-wrapper:last-child {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.btn-group {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+  flex-wrap: wrap;
 }
