--- a/src/style.css
+++ b/src/style.css
@@ -458,3 +458,52 @@ h3 {
   gap: 10px;
   flex-wrap: wrap;
 }
+
+.blog {
+  padding-block: var(--section-padding);
+}
+
+.blog .section-title {
+  margin-bottom: 20px;
+}
+
+.blog .section-text {
+  margin-bottom: 40px;
+}
+
+.blog-list {
+  display: grid;
+  gap: 30px;
+}
+
+.blog-banner {
+  margin-bottom: 20px;
+}
+
+.blog-banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.blog-meta {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  font-size: var(--fs-6);
+  text-transform: uppercase;
+  color: var(--cool-gray);
+  margin-bottom: 10px;
+}
+
+.blog-meta span {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.blog-title {
+  font-size: var(--fs-3);
+}
