--- a/src/style.css
+++ b/src/style.css
@@ -529,3 +529,50 @@ h3 {
 .blog-link-btn:is(:hover, :focus) {
   color: var(--sapphire);
 }
+
+/* Contact */
+
+.contact {
+  padding-block: var(--section-padding);
+  background-color: var(--ghost-white-1);
+}
+
+.contact .section-title {
+  margin-bottom: 15px;
+}
+
+.contact .section-text {
+  margin-bottom: 60px;
+}
+
+.contact-form {
+  margin-bottom: 50px;
+}
+
+.input-wrapper {
+  margin-bottom: 20px;
+}
+
+.contact label {
+  color: var(--independence);
+  font-weight: var(--fw-500);
+  margin-bottom: 10px;
+}
+
+.contact .input-field {
+  background-color: transparent;
+  color: var(--independence);
+  font-size: var(--fs-7);
+  padding: 10px 15px;
+  border: 1px solid hsla(244, 17%, 67%, 0.3);
+  border-radius: 4px;
+}
+
+.contact .input-field:focus {
+  outline: none;
+  background-color: var(--ghost-white-2);
+}
+
+.contact .input-field::placeholder {
+  color: var(--cool-gray);
+}
