--- a/src/style.css
+++ b/src/style.css
@@ -576,3 +576,48 @@ h3 {
 .contact .input-field::placeholder {
   color: var(--cool-gray);
 }
+
+textarea.input-field {
+  margin-bottom: 20px;
+  resize: vertical;
+  min-height: 50px;
+  height: 100px;
+  max-height: 200px;
+}
+
+.contact .btn-primary {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.contact .btn-primary ion-icon {
+  --ionicon-stroke-width: 40px;
+}
+
+.contact-list li:not(:last-child) {
+  margin-bottom: 25px;
+}
+
+.contact-link {
+  color: var(--cool-gray);
+  font-weight: var(--fw-500);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 5px;
+}
+
+.contact-link ion-icon {
+  font-size: 20px;
+  --ionicon-stroke-width: 30px;
+}
+
+.contact-link :is(span, address) {
+  width: calc(100% -25px);
+}
+
+.contact-link address {
+  font-style: normal;
+}
