--- a/src/style.css
+++ b/src/style.css
@@ -935,3 +935,21 @@ footer .logo {
     justify-content: flex-start;
   }
 }
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1150px;
+  }
+
+  .hero .container {
+    gap: 150px;
+  }
+
+  .footer-link-box {
+    margin-right: 40px;
+  }
+
+  .footer-list {
+    width: 170px;
+  }
+}
